assets/css/style.css
:root {
  --purple: #3e093e;
  --gold: #ccb322;
  --navy: #1d1d49;
  --gray: #575757;
  --base: #fafafa;
  --light: #ffffff;

  --mn-pad: 7vw;
  --sm-pad: 4rem;
  --nav-height: 10vh;

  --yellow-shadow: 0 0 24px 10px rgba(255, 191, 40, 0.247);
}

::-webkit-scrollbar {
  width: 4px;
  background-color: var(--base);
}

::-webkit-scrollbar-track {
  /* -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3); */
  background-color: var(--base);
}

::-webkit-scrollbar-thumb {
  background-color: var(--navy);
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  transition: 400ms all ease-out;
  outline: 1px solid green;
}

html {
  width: 100%;
  font-family: "Poppins";
  overflow-x: hidden;

  font-size: 15px;

  scroll-behavior: smooth;
}

body {
  position: relative;
  width: 100%;
  height: 100%;
  overflow: hidden;
  scroll-behavior: smooth;
}

/* #REGION TYPOGRAPHY */
h1,
h2,
h3,
h4,
h5,
h6 {
  color: var(--navy);
}
p {
  margin-bottom: 1rem;
  color: var(--navy);
  font-weight: normal;
}
/* #END-REGION TYPOGRAPHY */

/* #REGION IMAGES */
.img {
  object-fit: cover;
  width: 100%;
  height: 100%;
}

.img--bg {
  position: absolute;
  top: 0;
  left: 0;
  opacity: 0.4;
  z-index: -1;
}

/* #END-REGION IMAGES */

/* #REGION DECORATIVE */
.stripes {
  position: fixed;
  width: 60vw;
  height: 600vh;
  right: -60vw;
  top: -250vh;
  opacity: 0.7;
  background-color: var(--navy);
  background-position: 5vw 0;
  transform: skew(-45deg);
}

.stripes::before {
  content: "";
  position: absolute;
  width: 2vw;
  height: 100%;
  background-color: var(--gold);
  margin-left: -1rem;
}

.stripes::after {
  content: "";
  position: absolute;
  width: 5vw;
  height: 100%;
  opacity: 0.1;
}

.fab,
.fas {
  margin: 0 0.5rem;
}
.bg-white {
  background-color: var(--light);
}
/* #END-REGION DECORATIVE */

/* #REGION CONTROL */
a {
  text-transform: uppercase;
  text-decoration: none;
  color: var(--navy);
  font-weight: 500;
  display: flex;
  align-items: center;
}

a:hover {
  color: var(--gold);
}

.logo {
  position: relative;
  background-color: transparent !important;
  padding-left: 0 !important;
  width: 11vw;
  height: 5vh;
  z-index: 1;
}

.logo:hover {
  transform: scale(1.1);
}

.link {
  position: relative;
}

.link::before {
  content: "";
  position: absolute;
  width: 100%;
  height: 2px;
  color: var(--navy);
  background-color: transparent;
  transition: 200ms background-color ease-out;
  bottom: -4px;
}
.link--primary {
  padding: 8px 32px;
  background-color: rgba(151, 151, 156, 0.116);
}
.link:hover {
  color: currentColor;
}

.link:not(.link--primary):hover::before {
  background-color: var(--navy);
}

.btn {
  height: 4rem;
  padding: 1rem 2rem;
  margin: 2rem 0;
  padding: 1rem 2rem;
  cursor: pointer;
  border: none;
  outline: none;
  cursor: pointer;
  text-transform: uppercase;
  filter: brightness(1);
  font-family: "Poppins";
}

.btn:hover {
  filter: brightness(0.86);
}

.btn--primary {
  background-color: var(--gold);
}

.btn--fill {
  color: var(--gold) !important;
  background-color: var(--navy);
}

.btn--modal {
  width: 100%;
  height: 4rem;
  display: grid;
  place-content: center;
  color: var(--navy);
  margin: 0;
  margin-top: 1rem;
  z-index: 2;
}

.btn--modal:hover {
  color: var(--gold);
  background-color: var(--navy);
  opacity: 0.86;
}

.link {
  text-transform: uppercase;
}

.menu--chk {
  display: none;
}

.with-checkbox span {
  display: inline-block;
  width: 24px;
  height: 24px;
  border-radius: 50%;
  margin-left: 1.2rem;
  background-image: url("../images/icons/SVG/chk--not.svg");
  background-size: cover;
}
.checked .with-checkbox span {
  background-image: url("../images/icons/SVG/chk--checked.svg");
}

/* #REGION CONTROLS */
/* #END-REGION CONTROLS */
.nav--top {
  position: fixed;
  width: 100%;
  height: var(--nav-height);
  padding: 0 var(--mn-pad);
  display: flex;
  justify-content: space-between;
  align-items: center;
  z-index: 2;
  background-color: rgba(255, 255, 255, 0.39);
}

.nav--up {
  box-shadow: 0 0 6px rgba(0, 0, 0, 0.16);
}

.logo {
  font-size: 1.2em;
  height: var(--nav-height);
  line-height: var(--nav-height);
}

.nav__links {
  display: grid;
  grid-gap: 2vw;
  grid-auto-flow: column;
}

.main {
  position: relative;
  margin-top: 95vh;
}

.container {
  position: sticky;
  width: 100%;
  height: 100vh;
  max-width: 1920px;
  margin: 0 auto;
  background-color: var(--base);
  display: flex;
  padding: var(--sm-pad) var(--mn-pad);
}

.container--short {
  height: 85vh;
}

.flex {
  display: flex;
  flex-direction: row;
  width: 100%;
}

.flex--col {
  flex-direction: column;
}

.m-auto {
  margin: auto;
}

#header {
  position: fixed;
  width: 100vw;
  height: 95vh;
  padding: var(--nav-height) var(--mn-pad);
  flex-direction: column;
  justify-content: space-between;
  background-color: transparent;
}

#team {
  padding-left: 0;
  padding-right: 0;
}

#team,
#services {
  flex-direction: column;
  height: 80vh;
}

#services {
  height: 90vh;
}
.shadow,
#services::before,
#services::after {
  content: "";
  position: absolute;
  top: 45%;
  width: 15vw;
  height: 100vh;
  background-image: linear-gradient(90deg, var(--base), transparent);
  transform: translateY(-50%);
  z-index: 10;
  display: none;
}

#services::before {
  left: 0;
}
.shadow:last-of-type,
#services::after {
  background-image: linear-gradient(-90deg, var(--base), transparent);
  right: 0;
}

.service-list {
  height: 60vh;
  align-content: center;
  display: flex;
  /* background-color: red; */
}

.service--active .service:not(:hover),
.service-list:hover .service:not(:hover) {
  filter: brightness(0.9) grayscale(0.6);
}

.service--active .service:not(:hover) .service--more,
.service-list:hover .service:not(:hover) .service--more {
  opacity: 0;
}
/* ... */

